welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for(i<- 0 to nums.length-3){
             ^